components seperated from home page , instead of listbuilder solely now its using futurebuilder , also 2 new snackbar added and revised for getting parents context. now if there is an error or movie not found , its going back to welcome state and shows snackbar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["watchpage"]
+  "cSpell.words": [
+    "httphelper",
+    "moviecard",
+    "movieprovider",
+    "watchpage",
+    "welcomewidget"
+  ]
 }
