rented page created with future list , also rented provider coded but not fully tested yet , shopping card now have dynamic counting based on rented movies

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
     "moviecard",
     "movieprovider",
     "movieresults",
+    "prefs",
+    "rentedmovieprovider",
+    "rentedresults",
     "watchpage",
     "welcomewidget"
   ]
